# json_statc

./: CMakeLists.txt  README.md  char_helpers.c  char_helpers.h  file_reader.c  file_reader.h  file_serializer.c  file_serializer.h  json_elements.c  json_elements.h  json_handlers.c  json_handlers.h  list.c  list.h  main.c  string_container.c  string_container.h
test_jsons/: valid_json.json
